--- a/app/src/main/res/values-sw600dp/dimens_device.xml
+++ b/app/src/main/res/values-sw600dp/dimens_device.xml
@@ -19,6 +19,8 @@
     <dimen name="color_vertical_space">8dp</dimen> <!--TODO-->
     <dimen name="color_horizontal_size">5.5dp</dimen> <!--1.5dp-->
 
+    <!-- Info page dimens -->
+
     <dimen name="info_icon_size">152dp</dimen> <!--24dp-->
     <dimen name="info_content_bottom_space">12dp</dimen> <!--4dp-->
     <dimen name="info_title_text">20sp</dimen> <!--2sp-->
@@ -26,5 +28,23 @@
     <dimen name="info_details_text">16sp</dimen> <!--2sp-->
     <dimen name="info_details_horizontal_inside_space">24dp</dimen> <!--8dp-->
     <dimen name="info_details_vertical_inside_space">6dp</dimen> <!--2dp-->
+
+    <!-- Item dimens -->
+
+    <dimen name="item_rank_indicator_icon_size">18dp</dimen> <!--2dp-->
+    <dimen name="item_rank_indicator_space">1.25dp</dimen> <!--0.25dp-->
+
+    <dimen name="item_small_container_space">10dp</dimen> <!--2dp-->
+    <dimen name="item_small_content_horizontal_space">5dp</dimen> <!--1dp-->
+    <dimen name="item_small_content_between_space">9dp</dimen> <!--1dp-->
+    <dimen name="item_small_content_half_between_space">4.5dp</dimen> <!--0.5dp-->
+    <dimen name="item_small_title_text">18sp</dimen> <!--2sp-->
+    <dimen name="item_small_title_bottom_space">8.5dp</dimen> <!--0.5dp-->
+    <dimen name="item_small_subtitle_text">16sp</dimen> <!--2dp-->
+
+    <dimen name="item_color_indicator_space">1dp</dimen> <!--1dp-->
+
+    <dimen name="divider_small_space">5dp</dimen> <!--1dp-->
+    <dimen name="divider_middle_space">9dp</dimen> <!--1dp-->
 
 </resources>
