--- a/app/src/main/res/drawable/div_space_small.xml
+++ b/app/src/main/res/drawable/div_space_small.xml
@@ -2,6 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
         android:shape="rectangle">
 
-    <size android:height="0dp" android:width="@dimen/layout_4dp"/>
+    <size android:width="@dimen/divider_small_space"
+        android:height="0dp" />
 
 </shape>
