--- a/app/src/main/res/layout/item_notification.xml
+++ b/app/src/main/res/layout/item_notification.xml
@@ -21,25 +21,46 @@
             android:layout_height="wrap_content"
             android:background="?attr/selectableItemBackground"
             android:orientation="horizontal"
-            android:padding="@dimen/layout_8dp"
+            android:padding="@dimen/item_small_container_space"
             android:weightSum="1">
 
             <View
                 android:id="@+id/notification_color_view"
-                style="@style/View.Color.Vertical.Start"
+                style="@style/View.Color.Vertical"
+                android:layout_marginStart="@dimen/item_color_indicator_space"
+                android:layout_marginEnd="@dimen/item_small_content_between_space"
                 android:importantForAccessibility="no"
                 app:indicatorColor='@{item.note.color}'
                 tools:visibility="visible" />
 
-            <include
-                layout="@layout/inc_notification_content"
-                app:item="@{item}" />
+            <LinearLayout
+                android:id="@+id/notification_content_container"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="@dimen/item_small_content_half_between_space"
+                android:layout_weight="1"
+                android:orientation="vertical">
 
+                <TextView
+                    android:id="@+id/notification_name_text"
+                    style="@style/Text.SmallCard.Title"
+                    android:text='@{item.note.name.isEmpty() ? @string/hint_text_name : item.note.name}'
+                    tools:text="@string/preview_notification_name" />
+
+                <TextView
+                    android:id="@+id/notification_date_text"
+                    style="@style/Text.SmallCard.Subtitle"
+                    app:futureTime='@{item.alarm.date}'
+                    tools:text="@string/preview_notification_date" />
+
+            </LinearLayout>
+
+            <!--TODO change size for another screens-->
             <ImageButton
                 android:id="@+id/notification_cancel_button"
                 style="@style/Button.Medium"
-                android:layout_marginStart="@dimen/layout_8dp"
-                android:layout_marginEnd="@dimen/layout_4dp"
+                android:layout_marginStart="@dimen/item_small_content_between_space"
+                android:layout_marginEnd="@dimen/item_small_content_horizontal_space"
                 android:contentDescription='@{@string/description_item_notification_cancel + " " + (item.note.name.isEmpty() ? @string/hint_text_name : item.note.name) + @string/description_item_notification_cancel_at + " " + item.alarm.date}'
                 android:tint="?attr/clContent"
                 app:srcCompat="@drawable/ic_cancel_enter" />
