Add item_note_roll.xml and item_note_text.xml support for all screen sizes

--- a/app/src/main/res/layout-night/item_note_roll.xml
+++ b/app/src/main/res/layout-night/item_note_roll.xml
@@ -28,7 +28,7 @@
 
                 <View
                     android:id="@+id/note_roll_color_view"
-                    style="@style/View.Color.Vertical.End"
+                    style="@style/View.Color.Vertical.Note"
                     android:importantForAccessibility="no"
                     app:indicatorColor='@{item.color}' />
 
