--- a/app/src/main/res/values/styles_element.xml
+++ b/app/src/main/res/values/styles_element.xml
@@ -52,9 +52,9 @@
         <item name="android:background">@drawable/ic_color_indicator</item>
     </style>
 
-    <style name="View.Color.Vertical.End">
-        <item name="android:layout_marginStart">@dimen/color_vertical_space</item>
-        <item name="android:layout_marginLeft">@dimen/color_vertical_space</item>
+    <style name="View.Color.Vertical.Note">
+        <item name="android:layout_marginStart">@dimen/item_content_between_space</item>
+        <item name="android:layout_marginEnd">@dimen/color_vertical_shift_space</item>
     </style>
 
     <style name="View.Color.Horizontal">
@@ -100,7 +100,7 @@
 
     <style name="Container.Note.Content">
         <item name="android:orientation">horizontal</item>
-        <item name="android:padding">@dimen/layout_8dp</item>
+        <item name="android:padding">@dimen/item_container_space</item>
     </style>
 
     <style name="Container.Roll"/>
@@ -159,11 +159,11 @@
     <style name="Text.SmallCard.Title">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_marginBottom">@dimen/item_small_title_bottom_space</item>
+        <item name="android:layout_marginBottom">@dimen/item_content_between_space</item>
         <item name="android:ellipsize">end</item>
         <item name="android:singleLine">true</item>
         <item name="android:textAppearance">@style/Appearance.Main</item>
-        <item name="android:textSize">@dimen/item_small_title_text</item>
+        <item name="android:textSize">@dimen/item_first_text</item>
     </style>
 
     <style name="Text.SmallCard.Subtitle">
@@ -172,7 +172,7 @@
         <item name="android:ellipsize">end</item>
         <item name="android:singleLine">true</item>
         <item name="android:textAppearance">@style/Appearance.Second</item>
-        <item name="android:textSize">@dimen/item_small_subtitle_text</item>
+        <item name="android:textSize">@dimen/item_second_text</item>
     </style>
 
     <style name="Text.SmallCard.Indicator">
@@ -181,7 +181,7 @@
         <item name="android:ellipsize">end</item>
         <item name="android:singleLine">true</item>
         <item name="android:textAppearance">@style/Appearance.Indicator</item>
-        <item name="android:textSize">@dimen/item_small_subtitle_text</item>
+        <item name="android:textSize">@dimen/item_second_text</item>
     </style>
 
     <style name="Text.About">
@@ -204,23 +204,23 @@
     <style name="Text.Note.Name">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_marginBottom">@dimen/layout_8dp</item>
+        <item name="android:layout_marginBottom">@dimen/item_content_between_space</item>
         <item name="android:ellipsize">end</item>
         <item name="android:singleLine">true</item>
         <item name="android:textAppearance">@style/Appearance.Main</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:textSize">@dimen/text_16sp</item>
+        <item name="android:textSize">@dimen/item_first_text</item>
     </style>
 
     <style name="Text.Note.Roll">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_gravity">center</item>
-        <item name="android:layout_marginLeft">@dimen/layout_4dp</item>
+        <item name="android:layout_marginStart">@dimen/item_content_horizontal_space</item>
         <item name="android:ellipsize">end</item>
         <item name="android:singleLine">true</item>
         <item name="android:textAppearance">@style/Appearance.Main</item>
-        <item name="android:textSize">@dimen/text_16sp</item>
+        <item name="android:textSize">@dimen/item_first_text</item>
     </style>
 
     <style name="Text.Note.Content">
@@ -229,7 +229,7 @@
         <item name="android:ellipsize">end</item>
         <item name="android:maxLines">5</item>
         <item name="android:textAppearance">@style/Appearance.Main</item>
-        <item name="android:textSize">@dimen/text_16sp</item>
+        <item name="android:textSize">@dimen/item_first_text</item>
     </style>
 
     <style name="Text.Note.Info">
@@ -237,7 +237,8 @@
         <item name="android:ellipsize">end</item>
         <item name="android:singleLine">true</item>
         <item name="android:textAppearance">@style/Appearance.Second</item>
-        <item name="android:textSize">@dimen/text_12sp</item>
+        <item name="android:gravity">start|center_vertical</item>
+        <item name="android:textSize">@dimen/item_third_text</item>
     </style>
 
     <style name="Text.ToolbarNote" parent="TextAppearance.Widget.AppCompat.Toolbar.Title">
@@ -383,8 +384,8 @@
     </style>
 
     <style name="Image.Note">
-        <item name="android:layout_width">@dimen/icon_16dp</item>
-        <item name="android:layout_height">@dimen/icon_16dp</item>
+        <item name="android:layout_width">@dimen/item_small_icon_size</item>
+        <item name="android:layout_height">@dimen/item_small_icon_size</item>
         <item name="android:layout_gravity">center_vertical</item>
         <item name="android:gravity">center_vertical</item>
     </style>
@@ -398,11 +399,11 @@
     </style>
 
     <style name="Image.Rank">
-        <item name="android:layout_width">@dimen/item_rank_indicator_icon_size</item>
-        <item name="android:layout_height">@dimen/item_rank_indicator_icon_size</item>
+        <item name="android:layout_width">@dimen/item_small_icon_size</item>
+        <item name="android:layout_height">@dimen/item_small_icon_size</item>
         <item name="android:layout_gravity">bottom</item>
-        <item name="android:layout_marginBottom">@dimen/item_rank_indicator_space</item>
-        <item name="android:layout_marginStart">@dimen/item_rank_indicator_space</item>
+        <item name="android:layout_marginBottom">@dimen/item_count_icon_space</item>
+        <item name="android:layout_marginStart">@dimen/item_count_icon_space</item>
         <item name="android:tint">?attr/clIndicator</item>
     </style>
 
