--- a/app/src/main/res/layout/inc_note_roll_content.xml
+++ b/app/src/main/res/layout/inc_note_roll_content.xml
@@ -28,29 +28,38 @@
                 android:visibility='@{item.name.isEmpty() ? View.GONE : View.VISIBLE}'
                 tools:text="@string/preview_note_name" />
 
-            <include
-                android:id="@+id/note_roll_row0_container"
-                layout="@layout/inc_item_note_roll"
-                android:visibility="@{item.list.size() &gt;= 1 ? View.VISIBLE : View.GONE}"
-                app:item="@{item.list.size() &gt;= 1 ? item.list.get(0) : null}" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:divider="@drawable/div_horizontal_small"
+                android:orientation="vertical"
+                android:showDividers="middle">
 
-            <include
-                android:id="@+id/note_roll_row1_container"
-                layout="@layout/inc_item_note_roll"
-                android:visibility="@{item.list.size() &gt;= 2 ? View.VISIBLE : View.GONE}"
-                app:item="@{item.list.size() &gt;= 2 ? item.list.get(1) : null}" />
+                <include
+                    android:id="@+id/note_roll_row0_container"
+                    layout="@layout/inc_item_note_roll"
+                    android:visibility="@{item.list.size() &gt;= 1 ? View.VISIBLE : View.GONE}"
+                    app:item="@{item.list.size() &gt;= 1 ? item.list.get(0) : null}" />
 
-            <include
-                android:id="@+id/note_roll_row2_container"
-                layout="@layout/inc_item_note_roll"
-                android:visibility="@{item.list.size() &gt;= 3 ? View.VISIBLE : View.GONE}"
-                app:item="@{item.list.size() &gt;= 3 ? item.list.get(2) : null}" />
+                <include
+                    android:id="@+id/note_roll_row1_container"
+                    layout="@layout/inc_item_note_roll"
+                    android:visibility="@{item.list.size() &gt;= 2 ? View.VISIBLE : View.GONE}"
+                    app:item="@{item.list.size() &gt;= 2 ? item.list.get(1) : null}" />
 
-            <include
-                android:id="@+id/note_roll_row3_container"
-                layout="@layout/inc_item_note_roll"
-                android:visibility="@{item.list.size() &gt;= 4 ? View.VISIBLE : View.GONE}"
-                app:item="@{item.list.size() &gt;= 4 ? item.list.get(3) : null}" />
+                <include
+                    android:id="@+id/note_roll_row2_container"
+                    layout="@layout/inc_item_note_roll"
+                    android:visibility="@{item.list.size() &gt;= 3 ? View.VISIBLE : View.GONE}"
+                    app:item="@{item.list.size() &gt;= 3 ? item.list.get(2) : null}" />
+
+                <include
+                    android:id="@+id/note_roll_row3_container"
+                    layout="@layout/inc_item_note_roll"
+                    android:visibility="@{item.list.size() &gt;= 4 ? View.VISIBLE : View.GONE}"
+                    app:item="@{item.list.size() &gt;= 4 ? item.list.get(3) : null}" />
+
+            </LinearLayout>
 
             <include
                 layout="@layout/inc_note_roll_info"
