--- a/app/src/main/res/layout/item_note_text.xml
+++ b/app/src/main/res/layout/item_note_text.xml
@@ -30,7 +30,7 @@
 
                 <View
                     android:id="@+id/note_text_color_view"
-                    style="@style/View.Color.Vertical.End"
+                    style="@style/View.Color.Vertical.Note"
                     android:importantForAccessibility="no"
                     android:visibility="gone" />
 
