--- a/app/src/main/res/values/dimens_device.xml
+++ b/app/src/main/res/values/dimens_device.xml
@@ -16,7 +16,7 @@
     <dimen name="toolbar_elevation">8dp</dimen>
 
     <dimen name="color_vertical_size">8dp</dimen>
-    <dimen name="color_vertical_space">8dp</dimen>
+    <dimen name="color_vertical_shift_space">0dp</dimen>
     <dimen name="color_horizontal_size">4dp</dimen>
 
     <!-- Info page dimens -->
@@ -31,19 +31,17 @@
 
     <!-- Item dimens -->
 
-    <dimen name="item_rank_indicator_icon_size">16dp</dimen>
-    <dimen name="item_rank_indicator_space">1dp</dimen>
+    <dimen name="item_container_space">8dp</dimen>
+    <dimen name="item_content_horizontal_space">4dp</dimen>
+    <dimen name="item_content_between_space">8dp</dimen>
+    <dimen name="item_content_half_between_space">4dp</dimen>
+    <dimen name="item_first_text">16sp</dimen>
+    <dimen name="item_second_text">14sp</dimen>
+    <dimen name="item_third_text">12sp</dimen>
+    <dimen name="item_small_icon_size">16dp</dimen>
+    <dimen name="item_count_icon_space">1dp</dimen>
 
-    <dimen name="item_small_container_space">8dp</dimen>
-    <dimen name="item_small_content_horizontal_space">4dp</dimen>
-    <dimen name="item_small_content_between_space">8dp</dimen>
-    <dimen name="item_small_content_half_between_space">4dp</dimen>
-    <dimen name="item_small_title_text">16sp</dimen>
-    <dimen name="item_small_title_bottom_space">8dp</dimen>
-    <dimen name="item_small_subtitle_text">14sp</dimen>
-
-    <dimen name="item_color_indicator_space">0dp</dimen>
-
+    <dimen name="divider_tiny_space">0dp</dimen>
     <dimen name="divider_small_space">4dp</dimen>
     <dimen name="divider_middle_space">8dp</dimen>
 
