--- a/app/src/main/res/layout/activity_notification.xml
+++ b/app/src/main/res/layout/activity_notification.xml
@@ -41,7 +41,7 @@
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/notification_recycler"
-                    style="@style/RecyclerView"
+                    style="@style/RecyclerView.Normal"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:visibility="invisible"
