--- a/app/src/main/res/layout/fragment_bin.xml
+++ b/app/src/main/res/layout/fragment_bin.xml
@@ -35,7 +35,7 @@
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/bin_recycler"
-                style="@style/RecyclerView"
+                style="@style/RecyclerView.Normal"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:visibility="invisible"
