--- a/app/src/main/res/layout/fragment_notes.xml
+++ b/app/src/main/res/layout/fragment_notes.xml
@@ -39,7 +39,7 @@
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/notes_recycler"
-                style="@style/RecyclerView"
+                style="@style/RecyclerView.Normal"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:visibility="invisible"
