--- a/app/src/main/res/layout/fragment_rank.xml
+++ b/app/src/main/res/layout/fragment_rank.xml
@@ -54,7 +54,7 @@
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rank_recycler"
-                    style="@style/RecyclerView"
+                    style="@style/RecyclerView.Normal"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:visibility="invisible"
