--- a/app/src/main/res/values-sw600dp/dimens_device.xml
+++ b/app/src/main/res/values-sw600dp/dimens_device.xml
@@ -10,8 +10,10 @@
     <dimen name="text_note_card_elevation">2.3dp</dimen> <!--0.3dp-->
     <dimen name="text_note_card_radius">5dp</dimen> <!--1dp-->
 
-    <dimen name="recycler_vertical_margin">5dp</dimen> <!--1dp-->
+    <dimen name="recycler_vertical_margin">6dp</dimen> <!--2dp-->
     <dimen name="recycler_horizontal_margin">6dp</dimen> <!--6dp-->
+    <dimen name="recycler_small_vertical_margin">6dp</dimen> <!--2dp-->
+    <dimen name="recycler_small_horizontal_margin">4dp</dimen> <!--4dp-->
 
     <dimen name="toolbar_elevation">8.3dp</dimen> <!--0.3dp-->
 
@@ -41,8 +43,14 @@
     <dimen name="item_small_icon_size">18dp</dimen> <!--2dp-->
     <dimen name="item_count_icon_space">1.25dp</dimen> <!--0.25dp-->
 
-    <dimen name="divider_tiny_space">1dp</dimen> <!--1dp-->
+    <dimen name="divider_tiny_space">0.5dp</dimen> <!--0.5dp-->
     <dimen name="divider_small_space">5dp</dimen> <!--1dp-->
     <dimen name="divider_middle_space">9dp</dimen> <!--1dp-->
+
+    <!--  Item roll dimens  -->
+
+    <dimen name="item_roll_text">20sp</dimen> <!--2sp-->
+    <dimen name="item_roll_space">10dp</dimen> <!--2dp-->
+    <dimen name="item_roll_icon_horizontal_space">6dp</dimen> <!--6dp-->
 
 </resources>
