--- a/app/src/main/res/values-sw720dp/dimens_device.xml
+++ b/app/src/main/res/values-sw720dp/dimens_device.xml
@@ -10,8 +10,10 @@
     <dimen name="text_note_card_elevation">3dp</dimen> <!--1dp-->
     <dimen name="text_note_card_radius">6dp</dimen> <!--2dp-->
 
-    <dimen name="recycler_vertical_margin">8dp</dimen> <!--4dp-->
+    <dimen name="recycler_vertical_margin">10dp</dimen> <!--6dp-->
     <dimen name="recycler_horizontal_margin">12dp</dimen> <!--12dp-->
+    <dimen name="recycler_small_vertical_margin">8dp</dimen> <!--8dp-->
+    <dimen name="recycler_small_horizontal_margin">6dp</dimen> <!--6dp-->
 
     <dimen name="toolbar_elevation">9dp</dimen> <!--1dp-->
 
@@ -41,8 +43,14 @@
     <dimen name="item_small_icon_size">20dp</dimen> <!--4dp-->
     <dimen name="item_count_icon_space">1.5dp</dimen> <!--0.5dp-->
 
-    <dimen name="divider_tiny_space">2dp</dimen> <!--2dp-->
+    <dimen name="divider_tiny_space">1dp</dimen> <!--1dp-->
     <dimen name="divider_small_space">6dp</dimen> <!--2dp-->
     <dimen name="divider_middle_space">10dp</dimen> <!--2dp-->
+
+    <!--  Item roll dimens  -->
+
+    <dimen name="item_roll_text">22sp</dimen> <!--4sp-->
+    <dimen name="item_roll_space">12dp</dimen> <!--4dp-->
+    <dimen name="item_roll_icon_horizontal_space">8dp</dimen> <!--8dp-->
 
 </resources>
